[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/levels/Fountain.gd" type="Script" id=1]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain1.png" type="Texture" id=2]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain2.png" type="Texture" id=3]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain3.png" type="Texture" id=4]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain4.png" type="Texture" id=5]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain5.png" type="Texture" id=6]
[ext_resource path="res://Art/Animation/Health Fountain/FountainFire/HealthFountain6.png" type="Texture" id=7]
[ext_resource path="res://assets/tilesets/LightningTorch.png" type="Texture" id=8]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim1.png" type="Texture" id=9]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim2.png" type="Texture" id=10]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim3.png" type="Texture" id=11]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim4.png" type="Texture" id=12]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim5.png" type="Texture" id=13]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim6.png" type="Texture" id=14]
[ext_resource path="res://assets/Font/Basis33.tres" type="DynamicFont" id=15]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim1.png" type="Texture" id=16]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim2.png" type="Texture" id=17]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim3.png" type="Texture" id=18]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim4.png" type="Texture" id=19]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim5.png" type="Texture" id=20]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim6.png" type="Texture" id=21]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim7.png" type="Texture" id=22]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim8.png" type="Texture" id=23]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim9.png" type="Texture" id=24]
[ext_resource path="res://Art/Animation/Health Fountain/Snowflake/SnowflakeAnim10.png" type="Texture" id=25]
[ext_resource path="res://assets/SFX/Fountain.wav" type="AudioStream" id=26]



[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Fire",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 70.7726, 62.7142 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "Hovering",
"speed": 8.0
} ]

[node name="Fountain" type="Area2D"]
collision_layer = 0
collision_mask = 1024
script = ExtResource( 1 )

[node name="Fountain" type="AnimatedSprite" parent="."]
editor/display_folded = true
frames = SubResource( 1 )
animation = "Fire"
frame = 5
playing = true

[node name="Light2D" type="Light2D" parent="Fountain"]
position = Vector2( 4.16679, -11.0006 )
rotation = 1.5708
scale = Vector2( 1.0879, 1 )
texture = ExtResource( 8 )
color = Color( 0.309804, 0.741176, 0.721569, 0.607843 )
energy = 2.1

[node name="FountainDialogue" type="AnimatedSprite" parent="Fountain"]
editor/display_folded = true
visible = false
position = Vector2( -96.1021, -123.56 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="Label" type="Label" parent="Fountain/FountainDialogue"]
margin_left = -53.0
margin_top = -13.0
margin_right = 80.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 15 )
text = "A fountain...
Time to rest 
a bit."

[node name="Light2D" type="Light2D" parent="Fountain/FountainDialogue"]
position = Vector2( 35.357, -14.397 )
scale = Vector2( 1.52, 0.67 )
texture = ExtResource( 8 )
color = Color( 0.905882, 0.901961, 0.603922, 0.584314 )
energy = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Snowflake" type="AnimatedSprite" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 4 )
animation = "Hovering"
frame = 9
playing = true

[node name="Fountain2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1968.02, 388.185 )
stream = ExtResource( 26 )
volume_db = -12.0
autoplay = true
max_distance = 500.0

[connection signal="area_entered" from="." to="." method="_on_Fountain_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Fountain_area_exited"]
